# sophia_sparql_client

./: Cargo.toml
examples/: doctors.rs
src/: lib.rs  results.rs
src/results/: xml_parser.rs
