[package]
name = "sophia_sparql_client"
version = "0.1.0"
authors = ["Pierre-Antoine Champin <pierre-antoine@liris.cnrs.fr>"]
description = "A client implementation of the SPARQL protocol for Sophia"
license = "CECILL-B"
keywords = ["rdf", "linked-data", "semantic-web"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.31.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
rio_turtle = "0.8"
rio_xml = "0.8"
serde = { version="1.0.122", features=["derive"] }
serde_json = "1.0"
sophia = { version="0.8.0", features=["xml"]}
thiserror = "1.0.23"
